WIP pagination - Ajout de la table de jointure - Ajout des catégories - Récupération des films + ses catégories - récupération d'une catégorie + ses films (à voir)
