# Api/Controllers/CategorieController.js
@@ -1,5 +1,5 @@
 const BaseController = require('./BaseController')
-
+const PaginationMeta = require('../Models/PaginationMeta')
 
 class CategorieController extends BaseController{
     
@@ -19,6 +19,42 @@ class CategorieController extends BaseController{
             }
         }
     }
+
+    async getCategorieAndMoviesAsync(req,res){
+        let id = req.params.categorieId
+        this.serviceResponse = await this.service.getCategorieAndMoviesAsync(req,id)
+
+        if(this.serviceResponse.success){
+            const baseUrl = this.getBaseURL(req);
+            const data = this.serviceResponse.data
+            let query = {
+                "page": data.nextPage,
+                "limit": req.query.limit
+            }
+
+            let nextPageUrl = this.buildQueryRequest(baseUrl,query);
+            let prevPageUrl = undefined;
+            
+            if(data.previewPage >= 1){
+                query["page"] = data.previewPage
+                prevPageUrl = this.buildQueryRequest(baseUrl,query)
+            }
+            data.data = {}
+            data.data.categorie = data.categorie
+            data.data.categorie.movies = data.categorie.movies
+            data.data.movies = data.categorie.movies
+            let meta = new PaginationMeta(Number(req.query.page),data.pages,data.movieCount,prevPageUrl,nextPageUrl)
+            res.sendData(data.data,200, meta)
+
+        }else{
+            if(this.config.environment === "DEV"){
+                res.sendDevError(this.serviceResponse.error.message, this.serviceResponse.error.statuscode, new Date(), this.serviceResponse.error.technicalMessage)
+            }else{
+                res.sendError(this.serviceResponse.error.message, this.serviceResponse.error.statuscode, new Date())
+            }
+        }
+    }
+
 }
 
 module.exports = CategorieController
