# Api/Routes/categorieRoutes.js
@@ -9,9 +9,12 @@ const express = require('express')
 const router = express.Router();
 
 // middlewares
-const queryMiddleware = require('../Middleware/defaultCheckingQuery');
+const queryMiddleware = require('../Middleware/Securities/defaultCheckingQuery');
+const queryCategorieMiddleware = require('../Middleware/Securities/checkQueryCategories')
+
 
 router.get('/categorie/:categorieId', controller.getCategorieByIdAsync.bind(controller));
-//router.get('/categorie/:categorieId/movies', queryMovieMiddleware.checkExistQuery, queryMovieMiddleware.checkNameMovie, queryMovieMiddleware.checkPage, queryMovieMiddleware.checkLimit, controller.getAllMoviesAsync.bind(controller));
+router.get('/categorie/:categorieId/movies',queryMiddleware.checkExistQuery,queryMiddleware.checkLimit,queryMiddleware.checkPage, controller.getCategorieAndMoviesAsync.bind(controller))
+//router.get('/categories',queryMiddleware.checkExistQuery,queryMiddleware.checkLimit,queryMiddleware.checkPage,queryCategorieMiddleware.checkStatusCategorie, controller)
 
 module.exports = router
